--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
     </style>
   </head>
   <body>
-    <h1>
+    <nav>
+      <ol>
+        <li><a href="#jay">个人简介</a></li>
+        <li><a href="#events">重要事件</a></li>
+        <li><a href="#awards">成就和荣誉</a></li>
+        <li><a href="#works">主要作品</a></li>
+        <li><a href="#pictures">生活照</a></li>
+        <li><a href="#life">生平</a></li>
+      </ol>
+    </nav>
+    <h1 id='jay'>
       周杰伦
     </h1>
     <p>
       周杰伦英文名Jay
       Chou；1979年1月18日－），台湾华语流行歌曲男歌手、音乐家、编曲家、唱片制片人。同时是演员、导演，也是电竞团队队长兼老板、服饰品牌老板。
     </p>
-    <h2>
+    <h2 id='events'>
       重要事件
     </h2>
 
@@ -31,7 +41,7 @@
       <li>2016年，在电影《惊天魔盗团2》中扮演小李。</li>
     </ul>
 
-    <h2>
+    <h2 id='awards'>
       主要成就
     </h2>
 
@@ -65,7 +75,7 @@
       </li>
     </ol>
 
-    <h2>
+    <h2 id='works'>
       主要作品
     </h2>
 
@@ -136,14 +146,14 @@
       </tbody>
     </table>
 
-    <h2>生活照</h2>
+    <h2 id='pictures'>生活照</h2>
     <ul>
       <div><img width="400" src="image/jay1.jpg" alt="图一" /></div>
       <div><img width="400" src="image/jay2.jpg" alt="图二" /></div>
       <div><img width="400" src="image/jay3.jpg" alt="图三" /></div>
     </ul>
 
-    <h2>生平</h2>
+    <h2 id='life'>生平</h2>
 
     <p>
       周杰伦在台湾台北林口长大。父亲周耀中，当时任教于台北县芦洲国中，教授生物；母亲叶惠美则是林口国中美术教师。14岁时父母离异，由父亲担任监护人，年满18岁后选择与母亲共同生活，周杰伦在台湾民视新闻台由胡婉玲主持的节目《台湾演义》专访中，澄清《爸，我回来了》的灵感，只是对社会上家暴现象的感慨，并非指涉父母间的状况，父亲方面的亲戚也曾质疑过他，他还为此向亲戚们澄清，为此误解抱歉过。
